fix: CTA text truncate

--- a/layout/src/action-button/styles.module.scss
+++ b/layout/src/action-button/styles.module.scss
@@ -22,6 +22,7 @@
   line-height: 20px;
   cursor: pointer;
   text-decoration: none;
+  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 
